# tauri-static-deployer

./: Cargo.toml  Cross.toml  README.md  build.sh  send_to_test_machine.sh  unpack-zips.sh
.github/workflows/: release.yml
src/: main.rs
test_data/: release-notes.json  tauri.conf.json
