[package]
name = "tauri-static-deployer"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.7", features = ["cargo", "derive", "clap_derive"] }
data-encoding = "2.3.2"
derive_more = "0.99.17"
dotenv = "0.15.0"
encoding = "0.2.33"
enum-iterator = "0.7.0"
futures = "0.3.21"
itertools = "0.10.3"
log = "0.4.16"
pretty_env_logger = "0.4.0"
reqwest = "0.11.10"
rust-s3 = { version = "0.29.0", features = ["with-tokio", "never-encode-slash"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_variant = "0.1.1"
time = { version = "0.3", features = ["parsing", "formatting"]}
tokio = { version = "1.17.0", features = ["full"] }
walkdir = "2.3.2"
